--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -62,4 +62,4 @@ jobs:
           git config user.email "hoin.seven@gmail.com"     #username改为你github的注册邮箱
           git add .
           git commit -m "GitHub Actions Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-          git push --force --quiet "https://${{ secrets.ACCESS_TOKEN }}@$GITHUB_REPO" master:master
+          git push --force --quiet "https://${{ secrets.DEPLOY_KEY2 }}@$GITHUB_REPO" master:master
